# poll-wrangling

./: README.md  pyproject.toml
pollstrs/: Cargo.toml  pyproject.toml
pollstrs/.github/workflows/: CI.yml
pollstrs/src/: boilerplate.rs  lib.rs  poll_frame.rs
pypolls/: lib.py  main.py
