[package]
name = "pollstrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pollstrs"
crate-type = ["cdylib"]

[dependencies]
polars = "0.41.3"
pyo3 = "0.21.0"
pyo3-polars = "0.15.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.1"
